<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/team_1"
        style="@style/ScoreText"/>

    <ImageButton
        android:id="@+id/decreaseTeam1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/minus_button"
        android:src="@drawable/ic_remove_black_24dp"
        android:background="@drawable/button_backround"
        android:onClick="decreaseScore"
        style="@style/MinusButton"/>

    <TextView
        android:id="@+id/score_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/initial_count"
        style="@style/ScoreText"/>

    <ImageButton
        android:id="@+id/increaseTeam1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/plus_button"
        android:src="@drawable/ic_plus"
        android:background="@drawable/button_backround"
        android:onClick="increaseScore"
        style="@style/PlusButton"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team_2"
            style="@style/ScoreText"/>

        <ImageButton
            android:id="@+id/decreaseTeam2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/minus_button"
            android:src="@drawable/ic_remove_black_24dp"
            android:background="@drawable/button_backround"
            android:onClick="decreaseScore"
            style="@style/MinusButton"/>

        <TextView
            android:id="@+id/score_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/initial_count"
            style="@style/ScoreText"/>

        <ImageButton
            android:id="@+id/increaseTeam2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_button"
            android:src="@drawable/ic_plus"
            android:background="@drawable/button_backround"
            style="@style/PlusButton"/>
    </RelativeLayout>

</LinearLayout>